--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 body, html { font-size: 12px; color: #818181; }
 
-a, .firsthand .bg-orange { color: #9a9a9a; display: inline-block; }
+a { color: #9a9a9a; display: inline-block; }
 
-a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
+a:hover { color: #ff6700; }
 
 .main { width: 1190px; margin: 0 auto; }
 
@@ -25,12 +25,80 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .fr { float: right; }
 
+/*确认框*/
+.tocart { width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); position: fixed; z-index: 999; top: 0; left: 0; display: none; }
+
+.tocart .cartbox { margin: 100px auto; background: #fff; width: 400px; border-radius: 10px; overflow: hidden; position: relative; }
+
+.tocart .cartbox p { background: url(/images/images/alert-success.png) no-repeat center 40px; padding: 100px 60px 20px; font-size: 18px; text-align: center; }
+
+.tocart .cartbox p a { color: #ff6700; line-height: 40px; }
+
+.tocart .cartbox .know { width: 100%; text-align: center; background: #ccc; border: 0; border-top: 1px solid #666; height: 50px; }
+
+.tocart .cartbox .alertclose { position: absolute; right: 0; top: 0; border: 0; background: #fff; outline: none; font-size: 20px; }
+
+/*顶部滑动框*/
+.top { width: 100%; height: 60px; border-bottom: 1px solid #ccc; position: fixed; background: #fff; z-index: 10; top: -60px; }
+
+.top .top-nav, .top form { display: inline-block; }
+
+.top .top-nav, .top form, .top a { vertical-align: middle; }
+
+.top a { padding: 0 6px; font-size: 14px; }
+
+.top #topsearch { width: 290px; }
+
+.top form { margin: 0 30px; }
+
+/*左漂浮栏*/
+.leftnav { position: fixed; left: 30px; bottom: 30px; z-index: 10; background: #fff; display: none; }
+
+.leftnav a { display: block; width: 30px; height: 30px; border-bottom: 1px dashed #ccc; color: #ccc; text-align: center; padding: 4px; }
+
+.leftnav .active { background: #f00; color: #fff; }
+
+/*右漂浮栏*/
+.rightnav { position: fixed; right: 30px; bottom: 30px; border: 1px solid #ccc; z-index: 10; background: #fff; }
+
+.rightnav a { display: block; width: 30px; height: 30px; border-bottom: 1px solid #ccc; text-align: center; vertical-align: middle; padding: 5px; }
+
+.rightnav a span { vertical-align: middle; display: inline-block; }
+
+.rightnav1 { background: blue; color: #fff; }
+
+.rightnav2, .rightnav8, .rightnav9 { color: #ff6700; }
+
+.rightnav2:hover, .rightnav8:hover, .rightnav9:hover { background: #ff6700; color: #fff; }
+
+.rightnav3 { color: #f60c86; }
+
+.rightnav3:hover { background: #f60c86; color: #fff; }
+
+.rightnav4 { color: purple; }
+
+.rightnav4:hover { background: purple; color: #fff; }
+
+.rightnav5 { color: green; }
+
+.rightnav5:hover { background: green; color: #fff; }
+
+.rightnav6 { color: #a2745b; }
+
+.rightnav6:hover { background: #a2745b; color: #fff; }
+
+.rightnav7 { color: #f00; }
+
+.rightnav7:hover { background: #f00; color: #fff; }
+
 /*头信息*/
 .head { height: 35px; border-bottom: 1px solid #e6e6e6; font-size: 12px; }
 
-.register-head { background: #f3f3f3; }
+.head a { padding: 0 6px; }
 
-.head a:hover, .head .firsthand .bg-orange:hover, .firsthand .head .bg-orange:hover { color: #ff6700; }
+.head a:hover { color: #ff6700; }
+
+.register-head { background: #f3f3f3; }
 
 .head span { display: inline-block; }
 
@@ -38,7 +106,7 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .head-right { float: right; border-left: 1px solid #e6e6e6; line-height: 35px; }
 
-.head-right a, .head-right .firsthand .bg-orange, .firsthand .head-right .bg-orange { padding: 0 12px; line-height: 35px; display: inline-block; }
+.head-right a { padding: 0 12px; line-height: 35px; display: inline-block; }
 
 .head-right > li { float: left; height: 35px; line-height: 35px; padding: 0 6px; border-right: 1px solid #e6e6e6; }
 
@@ -84,11 +152,11 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .search-title { line-height: 29px; }
 
-.search-title a, .search-title .firsthand .bg-orange, .firsthand .search-title .bg-orange { text-align: center; padding: 0 10px; margin-right: 4px; display: inline-block; line-height: 30px; }
+.search-title a { text-align: center; padding: 0 10px; margin-right: 4px; display: inline-block; line-height: 30px; }
 
 .searchform { margin-top: -1px; }
 
-#searchbox { padding-left: 18px; width: 436px; height: 34px; border: 2px solid #ff6700; box-sizing: border-box; }
+#searchbox, #topsearch { padding-left: 18px; width: 436px; height: 34px; border: 2px solid #ff6700; box-sizing: border-box; }
 
 #search { width: 57px; height: 34px; text-align: center; line-height: 34px; background: #ff6700; outline: 0; border: 0; margin-bottom: -2px; box-sizing: border-box; cursor: pointer; color: #fff; }
 
@@ -103,9 +171,9 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 /*顶部导航1*/
 .nav { height: 48px; background: #000; }
 
-.nav a, .nav .firsthand .bg-orange, .firsthand .nav .bg-orange { float: left; padding: 0 18px; margin: 12px 0; line-height: 23px; border-left: 1px solid #555; color: #fff; font-size: 14px; }
+.nav a { float: left; padding: 0 18px; margin: 12px 0; line-height: 23px; border-left: 1px solid #555; color: #fff; font-size: 14px; }
 
-.nav a:hover, .nav .firsthand .bg-orange:hover, .firsthand .nav .bg-orange:hover { color: #ff6700; }
+.nav a:hover { color: #ff6700; }
 
 #index { background: #ff6700; margin: 0; line-height: 48px; height: 48px; }
 
@@ -116,16 +184,16 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 /*顶部导航2*/
 .f-s-box { height: 38px; border-bottom: 1px solid #e6e6e6; }
 
-.f-s-box a, .f-s-box .firsthand .bg-orange, .firsthand .f-s-box .bg-orange { padding: 0 9px; line-height: 38px; color: #333; }
+.f-s-box a { padding: 0 9px; line-height: 38px; color: #333; }
 
-.f-s-box a:hover, .f-s-box .firsthand .bg-orange:hover, .firsthand .f-s-box .bg-orange:hover { color: #ff6700; }
+.f-s-box a:hover { color: #ff6700; }
 
 .f-s-box .f-s-ad { float: right; color: red; }
 
 /*banner图2*/
 .banner2 { padding: 20px 0; }
 
-.banner2 a, .banner2 .firsthand .bg-orange, .firsthand .banner2 .bg-orange { display: block; float: left; }
+.banner2 a { display: block; float: left; }
 
 /*搜索列表*/
 .index-list .main { border-top: 1px solid #ccc; }
@@ -134,9 +202,9 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .index-list .list-box, .index-list .list-img, .index-list .list-pro { border: 1px solid #ccc; border-top: 0; }
 
-.index-list .list-box a, .index-list .list-img a, .index-list .list-pro a, .index-list .list-box .firsthand .bg-orange, .firsthand .index-list .list-box .bg-orange, .index-list .list-img .firsthand .bg-orange, .firsthand .index-list .list-img .bg-orange, .index-list .list-pro .firsthand .bg-orange, .firsthand .index-list .list-pro .bg-orange { padding: 0 16px; }
+.index-list .list-box a, .index-list .list-img a, .index-list .list-pro a { padding: 0 16px; }
 
-.index-list .list-img a, .index-list .list-img .firsthand .bg-orange, .firsthand .index-list .list-img .bg-orange { padding: 6px; }
+.index-list .list-img a { padding: 6px; }
 
 .index-list .list-pro ul, .index-list .list-pro ul li { display: inline-block; height: 40px; vertical-align: middle; }
 
@@ -146,7 +214,7 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .index-list .list-pro ul li .pullbox-right, .index-list .list-pro ul li .pullbox-left { position: absolute; top: 41px; left: -1px; width: 420px; padding: 20px; background: #fff; border: 1px solid #ccc; border-top: 0; }
 
-.index-list .list-pro ul li .pullbox-right a, .index-list .list-pro ul li .pullbox-left a, .index-list .list-pro ul li .pullbox-right .firsthand .bg-orange, .firsthand .index-list .list-pro ul li .pullbox-right .bg-orange, .index-list .list-pro ul li .pullbox-left .firsthand .bg-orange, .firsthand .index-list .list-pro ul li .pullbox-left .bg-orange { display: inline-block; line-height: 30px; width: 80px; }
+.index-list .list-pro ul li .pullbox-right a, .index-list .list-pro ul li .pullbox-left a { display: inline-block; line-height: 30px; width: 80px; }
 
 .index-list .list-pro ul li .pullbox-left { right: -1px; }
 
@@ -161,17 +229,17 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .footlogo { padding: 27px; }
 
-.footlogo a, .footlogo .firsthand .bg-orange, .firsthand .footlogo .bg-orange { padding: 16px; }
+.footlogo a { padding: 16px; }
 
 .footlogo .imgbox { display: block; }
 
 .fnav, .f-buss { border-left: 1px solid #aaa; padding-left: 24px; width: 100px; }
 
-.fnav a, .f-buss a, .fnav .firsthand .bg-orange, .firsthand .fnav .bg-orange, .f-buss .firsthand .bg-orange, .firsthand .f-buss .bg-orange { display: block; line-height: 24px; }
+.fnav a, .f-buss a { display: block; line-height: 24px; }
 
 .f-buss { width: 200px; }
 
-.f-buss a, .f-buss .firsthand .bg-orange, .firsthand .f-buss .bg-orange { display: inline-block; padding-right: 20px; }
+.f-buss a { display: inline-block; padding-right: 20px; }
 
 /*底部导航2*/
 .footnav2 { background: #393939; padding: 10px 0; }
@@ -182,14 +250,14 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .footnav2 .mess-head { margin-right: 10px; }
 
-.footnav2 a, .footnav2 .firsthand .bg-orange, .firsthand .footnav2 .bg-orange { padding: 0 7px 0 4px; line-height: 12px; margin: 6px 0; border-right: 1px solid #555; }
+.footnav2 a { padding: 0 7px 0 4px; line-height: 12px; margin: 6px 0; border-right: 1px solid #555; }
 
 /*底部信息*/
 .footer { padding: 14px 0 52px 0; background-color: #d6d6d6; text-align: center; }
 
 .footlink { line-height: 30px; }
 
-.footlink a, .footlink .firsthand .bg-orange, .firsthand .footlink .bg-orange { padding: 20px; }
+.footlink a { padding: 20px; }
 
 .foot-tel { margin: 0 10px; color: #aaa; }
 
@@ -234,6 +302,16 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .pro-box { border: 1px solid #eee; width: 188px; float: left; margin: 0 8px 8px 0; position: relative; }
 
+.pro-box .imgbox { position: relative; overflow: hidden; height: 188px; }
+
+.pro-box .imgbox img { display: block; }
+
+.pro-box .imgbox .share { position: absolute; height: 30px; bottom: -30px; background: #ff6700; width: 100%; }
+
+.pro-box .imgbox .share a { float: left; display: block; color: #fff; line-height: 30px; padding: 0 7px; }
+
+.pro-box .imgbox .pro-mess { position: absolute; bottom: -200px; }
+
 .pro-box .recommend-tag, .pro-box .create-tag { background: url(/images/images/recommend_ico.png); width: 44px; height: 43px; position: absolute; left: 0; top: 0; }
 
 .pro-box .create-tag { background: url(/images/images/bussrecom_ico.png); width: 60px; height: 60px; }
@@ -250,9 +328,9 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .pro-box .text-s .texts-name { border-top: 1px dashed #ccc; }
 
-.pro-box .text-s .texts-name a, .pro-box .text-s .texts-name .firsthand .bg-orange, .firsthand .pro-box .text-s .texts-name .bg-orange { color: #ccc; }
+.pro-box .text-s .texts-name a { color: #ccc; }
 
-.pro-box .text-s .texts-name a:hover, .pro-box .text-s .texts-name .firsthand .bg-orange:hover, .firsthand .pro-box .text-s .texts-name .bg-orange:hover { color: #18bb9c; }
+.pro-box .text-s .texts-name a:hover { color: #18bb9c; }
 
 .pro-box p { line-height: 30px; height: 30px; color: #111; width: 100%; overflow: hidden; white-space: nowrap; box-sizing: border-box; }
 
@@ -260,9 +338,9 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .pro-box .color-gray { color: gray; }
 
-.pro-box .name a, .pro-box .name .firsthand .bg-orange, .firsthand .pro-box .name .bg-orange { color: blue; }
+.pro-box .name a { color: blue; }
 
-.pro-box .name a:hover, .pro-box .name .firsthand .bg-orange:hover, .firsthand .pro-box .name .bg-orange:hover { color: #ff6700; }
+.pro-box .name a:hover { color: #ff6700; }
 
 .pro-box .collect { border: 1px solid #ff6700; color: #ff6700; padding: 4px 6px; border-radius: 2px; }
 
@@ -271,9 +349,13 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 /*实力质造*/
 .create { margin: 40px 0; border-bottom: 4px solid #18bb9c; }
 
-.create a, .create .firsthand .bg-orange, .firsthand .create .bg-orange { display: inline-block; background: #ccc; width: 80px; height: 36px; text-align: center; line-height: 36px; color: #333; font-size: 14px; }
+.create a { display: inline-block; background: #ccc; width: 80px; height: 36px; text-align: center; line-height: 36px; color: #333; font-size: 14px; }
 
 .create .bg-qing { background: #18bb9c; color: #fff; }
+
+#create .pro-box .share { background: #18bb9c; }
+
+#create .pro-box .texts .text-name a { color: #333; }
 
 #create .pro-box:hover { border: 1px solid #18bb9c; }
 
@@ -283,9 +365,9 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 /*一手货源*/
 .firsthand { margin: 40px 0; border-bottom: 4px solid #ff6700; }
 
-.firsthand a, .firsthand .bg-orange { line-height: 40px; height: 40px; text-align: center; width: 80px; }
+.firsthand a { line-height: 40px; height: 40px; text-align: center; width: 80px; }
 
-.firsthand .bg-orange { background: #ff6700; color: #fff; font-weight: bold; }
+.firsthand .bg-orange { line-height: 40px; height: 40px; text-align: center; width: 80px; background: #ff6700; color: #fff; font-weight: bold; }
 
 .firsthand .bg-orange:hover { color: #fff; }
 
@@ -300,27 +382,84 @@ a:hover, .firsthand .bg-orange:hover { color: #ff6700; }
 
 .ad2 .pages .current { bacmground: #ff6700; }
 
-/*精选*/
-.choice, .choice2 { width: 793px; margin-top: 30px; border-bottom: 3px solid #f00; float: left; }
+/*精选 & 三日新款 & 七日人气*/
+.choice, .choice2, .gold, .mass, .net, .man { width: 793px; margin-top: 30px; border-bottom: 3px solid #f00; float: left; }
 
-.choice a, .choice2 a, .choice .firsthand .bg-orange, .firsthand .choice .bg-orange, .choice2 .firsthand .bg-orange, .firsthand .choice2 .bg-orange { color: #333; line-height: 36px; padding: 0 6px; vertical-align: middle; }
+.choice a, .choice2 a, .gold a, .mass a, .net a, .man a { color: #333; line-height: 36px; padding: 0 6px; vertical-align: middle; }
 
-.choice .active, .choice2 .active { background: #f00; color: #fff; font-weight: bold; width: 80px; text-align: center; font-size: 16px; }
+.choice .active, .choice2 .active, .gold .active, .mass .active, .net .active, .man .active { background: #f00; color: #fff; font-weight: bold; width: 80px; text-align: center; font-size: 16px; }
 
-.choice .active:hover, .choice2 .active:hover { color: #fff; }
+.choice .active:hover, .choice2 .active:hover, .gold .active:hover, .mass .active:hover, .net .active:hover, .man .active:hover { color: #fff; }
 
-.choice2 { width: 397px; }
+.choice p, .choice2 p, .gold p, .mass p, .net p, .man p { text-align: left; }
 
-.choice2 .normol { color: #fff; font-weight: bold; width: 80px; background: #ccc; text-align: center; font-size: 16px; }
+.choice2, .gold, .mass, .net, .man { width: 397px; }
 
-.choice2 .normol:hover { color: #fff; }
+.choice2 .normol, .gold .normol, .mass .normol, .net .normol, .man .normol { color: #fff; font-weight: bold; width: 80px; background: #ccc; text-align: center; font-size: 16px; }
 
-#choice { width: 793px; }
+.choice2 .normol:hover, .gold .normol:hover, .mass .normol:hover, .net .normol:hover, .man .normol:hover { color: #fff; }
 
-#choice .choice-cou { float: right; margin-bottom: 8px; }
+#choice2, #choice, #goldbox, #netbox, #massbox, #man { width: 395px; }
 
-#choice2 { width: 397px; }
+#choice2 .pro-box, #choice .pro-box, #goldbox .pro-box, #netbox .pro-box, #massbox .pro-box, #man .pro-box { width: 195px; margin: 0; }
 
-#choice, #choice2 { float: left; }
+#choice2 .pro-box a, #choice .pro-box a, #goldbox .pro-box a, #netbox .pro-box a, #massbox .pro-box a, #man .pro-box a { padding: 6px; }
 
-#choice .pro-box:hover, #choice2 .pro-box:hover { border: 1px solid #f00; }
+#choice, #goldbox, #netbox { width: 793px; }
+
+#choice .choice-cou, #goldbox .choice-cou, #netbox .choice-cou { float: right; margin-bottom: 4px; }
+
+#choice, #goldbox, #netbox, #choice2, #choice, #goldbox, #netbox, #massbox, #man { float: left; }
+
+#choice .pro-box:hover, #goldbox .pro-box:hover, #netbox .pro-box:hover, #choice2 .pro-box:hover, #choice .pro-box:hover, #goldbox .pro-box:hover, #netbox .pro-box:hover, #massbox .pro-box:hover, #man .pro-box:hover { border: 1px solid #f00; }
+
+/*真皮 & 金牌 & 大货 & 库存*/
+.gold { width: 793px; border-bottom: 3px solid #ff6700; }
+
+.gold .active { background: #ff6700; }
+
+.mass { border-bottom: 3px solid #18bb9c; }
+
+.mass .active { background: #18bb9c; }
+
+#goldbox .pro-box:hover { border: 1px solid #ff6700; }
+
+#massbox .pro-box:hover { border: 1px solid #18bb9c; }
+
+/*全部网供货源&男鞋*/
+.net { width: 793px; border-bottom: 3px solid #18bb9c; margin: 30px 0; }
+
+.net .active { background: #18bb9c; }
+
+.net a { width: 90px; }
+
+.man { border-bottom: 3px solid purple; }
+
+.man .active { background: purple; }
+
+#netbox .pro-box:hover { border: 1px solid #18bb9c; }
+
+#man .pro-box:hover { border: 1px solid purple; }
+
+/*源产地货源*/
+.source { border-bottom: 2px solid #ff6700; margin: 30px 0; }
+
+.source a { width: 80px; line-height: 30px; color: #fff; background: #ff6700; text-align: center; }
+
+#source .pro-box .recommend-tag, #source .pro-box .create-tag { display: none; }
+
+/*广告位4*/
+.ad4 { margin: 30px 0; }
+
+/*猜你喜欢*/
+.guess { height: 40px; position: relative; text-align: center; }
+
+.guess .line { position: absolute; width: 100%; float: left; height: 19px; border-bottom: 1px solid #333; }
+
+.guess h3 { display: inline-block; color: #333; text-align: center; line-height: 40px; width: 120px; background: #fff; position: relative; z-index: 2; font-size: 20px; }
+
+#guess ul li, .index-list .list-pro ul #guess li li { width: 1190px; }
+
+#guess .pages div { background: #ccc; }
+
+#guess .pages .current { background: #f00; }
