--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -2,7 +2,7 @@ $qing: #18bb9c;
 $hui : #222;
 $blue: #67c2e1;
 @charset "UTF-8";
-html a {
+html a { 
   color: #666; 
 }
 
@@ -15,7 +15,68 @@ html a:hover {
 
 .fr {
   float: right; }
-
+/*弹出框*/
+.alertbox{
+  position:fixed;
+  left: 0;
+  top: 0;
+  background: rgba(0,0,0,0.3);
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: none;
+  .alert{
+    margin: auto;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    height: 140px;
+    background: #fff;
+    padding: 0;
+    border: 0;
+    h3{
+      height: 40px;
+      background: $qing;
+      line-height: 40px;
+      padding-left: 20px;
+      font-size: 16px;
+      color: #fff;
+      a{
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        border-radius: 10px;
+        border:1px solid #fff;
+        color: #fff;
+        text-align: center;
+        line-height: 18px;
+        margin: 10px 10px 0 0;
+      }
+    }
+    .info{
+      line-height: 30px;
+      text-align: center;
+      font-size: 16px;
+    }
+    .sure,.cancel{
+      width: 50px;
+      line-height: 30px;
+      text-align: center;
+      display: inline-block;
+      color: #fff;
+      border: 0 ;
+      margin-right: 16px;
+    }
+    .sure{
+      background: $qing;
+    }
+    .cancel{
+      background: #ccc;
+    }
+  }
+}
 /*头*/
 .head {
   height: 40px;
@@ -233,11 +294,13 @@ html a:hover {
       background: $blue;
     }
   }
+
 }
 .product{
   border:1px solid #666;
   height: 120px;
   background: #fef5eb;
+  margin-bottom: 20px;
   a:hover{
     color: #666;
   }
@@ -284,12 +347,17 @@ html a:hover {
       padding: 4px;
       a{
         color: #000;
+        line-height: 30px;
       }
       p{
-        color: #333;
+        color: #999;
         line-height: 14px;
       }
     }
+  }
+  .price{
+      font-size: 16px;
+      font-weight: bold;
   }
 }
 /*链接*/
