--- a/css/product.css
+++ b/css/product.css
@@ -13,6 +13,19 @@ a:hover { color: #ff6700; }
 
 .main { width: 1190px; margin: 0 auto; }
 
+/*确认框*/
+.tocart { width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); position: fixed; z-index: 999; top: 0; left: 0; display: none; }
+
+.tocart .cartbox { margin: 100px auto; background: #fff; width: 400px; border-radius: 10px; overflow: hidden; position: relative; }
+
+.tocart .cartbox p { background: url(/images/images/alert-success.png) no-repeat center 40px; padding: 100px 60px 20px; font-size: 18px; text-align: center; }
+
+.tocart .cartbox p a { color: #ff6700; line-height: 40px; }
+
+.tocart .cartbox .know { width: 100%; text-align: center; background: #ccc; border: 0; border-top: 1px solid #666; height: 50px; }
+
+.tocart .cartbox .alertclose { position: absolute; right: 0; top: 0; border: 0; background: #fff; outline: none; font-size: 20px; }
+
 /*顶部滑动框*/
 .top { width: 100%; height: 60px; border-bottom: 1px solid #ccc; position: fixed; background: #fff; z-index: 10; top: -60px; overflow: hidden; }
 
