--- a/css/register.css
+++ b/css/register.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+color-or { color: #ff6700; }
+
 /**************************注册页面****************************/
 .reg-con-head { padding-left: 47px; margin-top: 50px; }
 
