--- a/sass/register.scss
+++ b/sass/register.scss
@@ -1,3 +1,15 @@
+color-or{
+    color: #ff6700; 
+}
+form {
+	img{
+		height: 36px; 
+		vertical-align: middle;
+	}
+	input{
+		vertical-align: middle;
+	}	
+}
 /**************************注册页面****************************/
 .reg-content{
 
@@ -137,7 +149,6 @@ select{
 }
 .checkimg{
     width: 200px;
-    height: 50px;
     display: inline-block;
     vertical-align: middle;
 }
@@ -296,7 +307,6 @@ form .login-input input{
 }
 .codeimg{
     width: 150px;
-    height: 50px;
     display: inline-block;
     vertical-align: middle;
 }
